--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "tulind": "^0.8.18",
     "ws": "^7.2.0"
   },
   "devDependencies": {
