Added: Logging for visibility Added: Customisable contract size and instrument

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,5 @@ CLIENTID=YOUR_API_KEY_ID
 CLIENTSECRET=YOUR_API_KEY_SECRET
 TIMEFRAME=ANY_NUMBER_IN_MINUTES
 INSTRUMENTNAME=INSTRUMENT_NAME_TO_TRADE
+CONTRACT_SIZE=NUMBER_IN_DOLLARS
+AGGRESSION=VALUE_FROM_ONE_TO_TEN
