--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "chalk": "^3.0.0",
     "dotenv": "^8.2.0",
     "tulind": "^0.8.18",
     "ws": "^7.2.0"
